# zeno

./: .dockerignore  .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  Earthfile  fly.toml  go.mod  go.sum  indexer.go  justfile  main.go  main_test.go  routes.go  scraper.go  scraper_test.go
db/: sqlite.go  sqlite_test.go
domain/: scrapedDoc.go
indexer/: indexer.go
repo/: sqlite.go  sqlite_test.go
scraper/: scraper.go  scraper_test.go
src/: doc.rs  main.rs  pdf.rs  searcher.rs
src/searcher/: actor.rs  engine.rs  mod.rs
static/: index.html  scraped.html
testdata/: neural-net.html
